# leetcode-debug

./: .gitignore  CMakeLists.txt  README.md  Readme.md  header.h  main.cpp  main1.cpp  multiplefunction.cpp  multiplefunction.txt  testcases.txt
.cache/clangd/index/: header.h.E2AEAC7348F38263.idx  main.cpp.C00D3F65F32359F7.idx  main1.cpp.E369E2C6A6DC18DA.idx  multiplefunction.cpp.BDAA1CE3E9223DD9.idx  singlefunction.cpp.10C7878006240F9A.idx
